--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gsap": "^3.12.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-marquee": "^4.1.0"
