--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "prettier": "^3.2.5"
   },
   "eslintConfig": {
     "root": true,
